Ajout d'un middleware d'authentification

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
-VITE_YOUR_SERVICE_ID=service_h0s6flj
-VITE_YOUR_PUBLIC_KEY=XLsZVm4aLcJeDnjFA
-VITE_YOUR_TEMPLATE_ID_REGISTRATION=template_kj0zkj3
-VITE_YOUR_TEMPLATE_ID_CONTACT=template_dii4cba
+process.env.SERVICE_ID=service_h0s6flj
+process.env.PUBLIC_KEY=XLsZVm4aLcJeDnjFA
+process.env.TEMPLATE_ID_REGISTRATION=template_kj0zkj3
+process.env.TEMPLATE_ID_CONTACT=template_dii4cba
