--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,8 @@
     "mongoose": "^8.4.0",
     "mongoose-unique-validator": "^5.0.0",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.2"
+    "nodemon": "^3.1.2",
+    "styled-components": "^6.1.11"
   },
   "proxy": "http://localhost:3001"
 }
