Mise à jour connexion bdd

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGO_URI = 'mongodb+srv://hpommier:zPyHHCaloHEZWu9V@myairportacademy.ibku7eo.mongodb.net/?retryWrites=true&w=majority&appName=myairportacademy'
+MONGO_URI = 'mongodb+srv://myairportacademy2:Zmzr2NdzptMvEWLc@myairportacademy.ffipkk1.mongodb.net/?retryWrites=true&w=majority&appName=MyAirportAcademy'
