--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,8 @@
     "react-hook-form": "^7.51.5",
     "react-router-dom": "^6.23.1",
     "sort-by": "^1.2.0",
+    "styled-components": "^6.1.11",
+    "styled-system": "^5.1.5",
     "yup": "^1.4.0"
   },
   "devDependencies": {
