--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^8.4.0",
     "mongoose-unique-validator": "^5.0.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.13",
     "nodemon": "^3.1.2"
   },
   "proxy": "http://localhost:3001"
