--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
-process.env.SERVICE_ID=service_h0s6flj
-process.env.PUBLIC_KEY=XLsZVm4aLcJeDnjFA
-process.env.TEMPLATE_ID_REGISTRATION=template_kj0zkj3
-process.env.TEMPLATE_ID_CONTACT=template_dii4cba
+SERVICE_ID=service_h0s6flj
+PUBLIC_KEY=XLsZVm4aLcJeDnjFA
+TEMPLATE_ID_REGISTRATION=template_kj0zkj3
+TEMPLATE_ID_CONTACT=template_dii4cba
