mise à jour variable d'environnement db

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGO_URI = 'mongodb+srv://hpommier:zPyHHCaloHEZWu9V@myairportacademy.ibku7eo.mongodb.net/?retryWrites=true&w=majority&appName=myairportacademy'
+MONGO_URI = 'mongodb+srv://hpommier:lIpy1gkYZoFnU9If@myairportacademy.ju87f.mongodb.net/?retryWrites=true&w=majority&appName=myairportacademy'
 SMTP_HOST = 'smtp.mailtrap.io'
 SMTP_PORT = 2525
 SMTP_USER = 8fd8c41603f0f8
